# enco_test

./: Makefile  README.md  pyproject.toml  task_1.ipynb  task_3.sql  task_4.sql
dags/: dag.py
dags/task_2/: config.py  task.py
dags/task_2/db/: connection.py
dags/task_2/s3/: __init__.py  adapter.py
docker/: tests-docker-compose.yaml
docker/app/: .env  Dockerfile
